connection changes made

--- a/aws/out.yml
+++ b/aws/out.yml
@@ -7,6 +7,12 @@ Parameters:
     Description: Name of the SQS queue
     Default: llm-queue
 Resources:
+  MyDLQ:
+    Type: AWS::SQS::Queue
+    Properties:
+      QueueName:
+        Fn::Sub: ${QueueName}-dlq
+      MessageRetentionPeriod: 1209600
   MySQSQueue:
     Type: AWS::SQS::Queue
     Properties:
@@ -16,6 +22,12 @@ Resources:
       MessageRetentionPeriod: 345600
       DelaySeconds: 0
       ReceiveMessageWaitTimeSeconds: 0
+      RedrivePolicy:
+        deadLetterTargetArn:
+          Fn::GetAtt:
+          - MyDLQ
+          - Arn
+        maxReceiveCount: 1
   SQSQueuePolicy:
     Type: AWS::SQS::QueuePolicy
     Properties:
@@ -54,7 +66,7 @@ Resources:
     Properties:
       Handler: lambda_solutions.lambda_handler
       Runtime: python3.8
-      CodeUri: s3://wapify-llm-stack/ded646eb204c0edd96063fbcb729bfd4
+      CodeUri: s3://wapify-llm-stack/3a43d4993263328f83aeeeb04e1cb248
       Description: lambda for solutions
       Timeout: 100
       MemorySize: 180
@@ -79,7 +91,7 @@ Resources:
     Properties:
       LayerName: blank-python-lib
       Description: Dependencies for the blank-python sample app.
-      ContentUri: s3://wapify-llm-stack/3d994f7aaf199ed51e3789f19975f7c4
+      ContentUri: s3://wapify-llm-stack/68ae853140fe8ffb66f8af075a087d75
       CompatibleRuntimes:
       - python3.8
   LambdaExecutionRole:
