--- a/aws/template.yaml
+++ b/aws/template.yaml
@@ -11,6 +11,14 @@ Parameters:
     Type: String
     Description: Name of the tasks SQS queue
     Default: llm-queue-tasks
+  KPIQueueName:
+    Type: String
+    Description: Name of the KPI SQS queue
+    Default: llm-queue-kpi
+  UsecaseQueueName:
+    Type: String
+    Description: Name of the usecase SQS queue
+    Default: llm-queue-usecase
 
 Resources:
   MyDLQ:
@@ -37,6 +45,30 @@ Resources:
       QueueName: !Ref TasksQueueName
       VisibilityTimeout: 1000
       MessageRetentionPeriod: 345600 # 4 days in seconds
+      DelaySeconds: 0
+      ReceiveMessageWaitTimeSeconds: 0
+      RedrivePolicy:
+        deadLetterTargetArn: !GetAtt MyDLQ.Arn
+        maxReceiveCount: 1
+
+  MyKPIQueue:
+    Type: AWS::SQS::Queue
+    Properties:
+      QueueName: !Ref KPIQueueName
+      VisibilityTimeout: 1000
+      MessageRetentionPeriod: 345600 # 4 days in seconds
+      DelaySeconds: 0
+      ReceiveMessageWaitTimeSeconds: 0
+      RedrivePolicy:
+        deadLetterTargetArn: !GetAtt MyDLQ.Arn
+        maxReceiveCount: 1
+
+  MyUsecaseQueue:
+    Type: AWS::SQS::Queue
+    Properties:
+      QueueName: !Ref UsecaseQueueName
+      VisibilityTimeout: 1000
+      MessageRetentionPeriod: 345600 
       DelaySeconds: 0
       ReceiveMessageWaitTimeSeconds: 0
       RedrivePolicy:
@@ -72,6 +104,36 @@ Resources:
             Action:
               - "sqs:SendMessage"
             Resource: !GetAtt MyTasksQueue.Arn
+
+  KPISQSQueuePolicy:
+    Type: AWS::SQS::QueuePolicy
+    Properties:
+      Queues:
+        - !Ref MyKPIQueue
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: "cloudwatch.amazonaws.com"
+            Action:
+              - "sqs:SendMessage"
+            Resource: !GetAtt MyKPIQueue.Arn
+
+  UsecaseSQSQueuePolicy:
+    Type: AWS::SQS::QueuePolicy
+    Properties:
+      Queues:
+        - !Ref MyUsecaseQueue
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: "cloudwatch.amazonaws.com"
+            Action:
+              - "sqs:SendMessage"
+            Resource: !GetAtt MyUsecaseQueue.Arn
 
   SQSLogGroup:
     Type: AWS::Logs::LogGroup
@@ -132,6 +194,49 @@ Resources:
         Variables:
           AWS_CLOUDFORMATION_STACK_NAME: !Ref AWS::StackName
           SECRET_NAME: llmapp
+  KPILambda:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: lambda_kpi.lambda_handler
+      Runtime: python3.8
+      CodeUri: function/.
+      Description: Lambda for KPI processing
+      Timeout: 100
+      MemorySize: 180
+      Role: !GetAtt LambdaExecutionRole.Arn
+      Policies:
+        - AWSLambdaBasicExecutionRole
+        - AWSLambda_ReadOnlyAccess
+        - AWSXrayWriteOnlyAccess
+      Tracing: Active
+      Layers:
+        - !Ref libs
+      Environment:
+        Variables:
+          AWS_CLOUDFORMATION_STACK_NAME: !Ref AWS::StackName
+          SECRET_NAME: llmapp
+
+  UsecaseLambda:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: lambda_usecase.lambda_handler
+      Runtime: python3.8
+      CodeUri: function/.
+      Description: Lambda for usecase processing
+      Timeout: 100
+      MemorySize: 180
+      Role: !GetAtt LambdaExecutionRole.Arn
+      Policies:
+        - AWSLambdaBasicExecutionRole
+        - AWSLambda_ReadOnlyAccess
+        - AWSXrayWriteOnlyAccess
+      Tracing: Active
+      Layers:
+        - !Ref libs
+      Environment:
+        Variables:
+          AWS_CLOUDFORMATION_STACK_NAME: !Ref AWS::StackName
+          SECRET_NAME: llmapp
 
   libs:
     Type: AWS::Serverless::LayerVersion
@@ -175,6 +280,8 @@ Resources:
                 Resource: 
                   - !GetAtt MySQSQueue.Arn
                   - !GetAtt MyTasksQueue.Arn
+                  - !GetAtt MyKPIQueue.Arn
+                  - !GetAtt MyUsecaseQueue.Arn
 
   LambdaSQSPermission:
     Type: AWS::Lambda::Permission
@@ -191,6 +298,22 @@ Resources:
       Action: lambda:InvokeFunction
       Principal: sqs.amazonaws.com
       SourceArn: !GetAtt MyTasksQueue.Arn
+
+  KPILambdaSQSPermission:
+    Type: AWS::Lambda::Permission
+    Properties:
+      FunctionName: !Ref KPILambda
+      Action: lambda:InvokeFunction
+      Principal: sqs.amazonaws.com
+      SourceArn: !GetAtt MyKPIQueue.Arn
+
+  UsecaseLambdaSQSPermission:
+    Type: AWS::Lambda::Permission
+    Properties:
+      FunctionName: !Ref UsecaseLambda
+      Action: lambda:InvokeFunction
+      Principal: sqs.amazonaws.com
+      SourceArn: !GetAtt MyUsecaseQueue.Arn
 
   TasksLambdaSQSTrigger:
     Type: AWS::Lambda::EventSourceMapping
@@ -209,6 +332,24 @@ Resources:
       BatchSize: 1
       ScalingConfig:
         MaximumConcurrency: 5
+
+  KPILambdaSQSTrigger:
+    Type: AWS::Lambda::EventSourceMapping
+    Properties:
+      EventSourceArn: !GetAtt MyKPIQueue.Arn
+      FunctionName: !Ref KPILambda
+      BatchSize: 1
+      ScalingConfig:
+        MaximumConcurrency: 5
+
+  UsecaseLambdaSQSTrigger:
+    Type: AWS::Lambda::EventSourceMapping
+    Properties:
+      EventSourceArn: !GetAtt MyUsecaseQueue.Arn
+      FunctionName: !Ref UsecaseLambda
+      BatchSize: 1
+      ScalingConfig:
+        MaximumConcurrency: 5
         
   LambdaLogGroup:
     Type: AWS::Logs::LogGroup
@@ -220,6 +361,18 @@ Resources:
     Type: AWS::Logs::LogGroup
     Properties:
       LogGroupName: !Sub "/aws/lambda/${TasksLambda}"
+      RetentionInDays: 7
+
+  KPILambdaLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub "/aws/lambda/${KPILambda}"
+      RetentionInDays: 7
+
+  UsecaseLambdaLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub "/aws/lambda/${UsecaseLambda}"
       RetentionInDays: 7
 
 Outputs:
@@ -244,3 +397,21 @@ Outputs:
   TasksLambdaFunctionARN:
     Description: ARN of the Tasks Lambda Function
     Value: !GetAtt TasksLambda.Arn
+  KPIQueueURL:
+    Description: URL of the created KPI SQS Queue
+    Value: !Ref MyKPIQueue
+  KPIQueueARN:
+    Description: ARN of the created KPI SQS Queue
+    Value: !GetAtt MyKPIQueue.Arn
+  KPILambdaFunctionARN:
+    Description: ARN of the KPI Lambda Function
+    Value: !GetAtt KPILambda.Arn
+  UsecaseQueueURL:
+    Description: URL of the created Usecase SQS Queue
+    Value: !Ref MyUsecaseQueue
+  UsecaseQueueARN:
+    Description: ARN of the created Usecase SQS Queue
+    Value: !GetAtt MyUsecaseQueue.Arn
+  UsecaseLambdaFunctionARN:
+    Description: ARN of the Usecase Lambda Function
+    Value: !GetAtt UsecaseLambda.Arn
